# microvm-networking

./: .gitignore  README.md  firecracker.md  main.c
aws/: README.md  variables.tf
aws/modules/ec2/: key_pair.tf  outputs.tf  variables.tf
benchmark/: Cargo.toml  README.md  go.mod  go.sum  main.go  trace_syscalls.sh
benchmark/cmd/: main.go
benchmark/internal/config/: config.go  mode.go
benchmark/internal/experiment/: bm.benchmark.go  experiment.go  node.go  trace_syscalls.sh  vm.benchmark.go  vm.go  vm_vm.go  vsock.go
benchmark/internal/filesystem/: dir.go  log.go
benchmark/internal/logging/: log.go
benchmark/internal/network/: cleanup.go  dhcp.go  setup.go  types.go
benchmark/internal/vm/: manager.go  network.go  rootfs.go  vm.go
benchmark/proto/: filesystem.proto  network.proto  node.proto  vm.proto
benchmark/src/: main.rs
benchmark/tests/: bm-latency.json  bm-throughput.json  same-node.json  vm-latency.json  vm-throughput-1.json  vm-throughput.json
cloud-hypervisor/: README.md  ovs-dpdk-multinode.md  ovs-dpdk.md
cloud-hypervisor/init/: README.md  clean-disk-state.sh  create-cloud-init.sh  network-config  network-config-vm0  network-config-vm0-dpdk  network-config-vm1  network-config-vm1-dpdk  user-data
cloud-hypervisor/ovs-dpdk/: BOTTLENECK_FOUND.md  FIX_11GBPS_BOTTLENECK.md  NIC.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_TUNING.md  PUSH_HARDER.md  README.md  REAL_FIX.md  TSO_FIX.md  diagnose_tx_queue1.sh  diagnose_vm_bottleneck.sh  fix_dpdk_multinode.sh  fix_tx_queue1_bottleneck.sh  fix_vm_queues.sh  init_dpdk.sh  init_dpdk_optimized.sh  monitor_queues.sh  multinode.md  netplan-node0.yaml  netplan-node1.yaml  optimize_performance.sh  ovs-dpdk-multinode.md  ovs-dpdk-optimized.md  pin_vm_cores.sh  quick_fix.sh  setup_dpdk.sh  setup_node.sh  verify_dpdk_path.sh
cloud-hypervisor/vanilla/: multinode.md  netplan-node0.yaml  netplan-node1.yaml  setup_node.sh
cloudlab/: README.md  api.md  bpf.md  config  firecracker.md  init-1-ssh.sh  init-2-code.sh  network.json  networking.md  rootfs.md  setup.md
cloudlab/results/: hello.md  vm_client.md  vm_server.md  vmlinux.md
cloudlab/results/bm-bm/: bm_bm.md
cloudlab/results/bm-vm-same-node/: vm_client.md
cloudlab/results/multinode/: TAS.md  bm-bm.md  ch-ch-ovs-dpdk-ori.md  ch-ch-ovs-dpdk.md  ch-ch.md  comparison.md  fc-fc.md  kvm-kvm-vhost.md  kvm-kvm.md  syscalls-explained.md  vm-vm.md
cloudlab/rootfs/: ssh_config  ssh_ori
cloudlab/testing/: a.sh  bpftrace.sh  latency.md  profile_syscall.md  results.md  test.sh  tests.md  throughput.md  trace_server.sh  trace_syscalls.bt  vm-vsock.sh  vsock-listener.service  vsock.md
cloudlab/unused/: old-setup.md
dpdk/: dpdk.md  fc_config.json  shm.md
dummy/: CMakeLists.txt  Makefile  README.md
dummy/include/: dummy_nic.hpp  packet.hpp  stack_api.hpp
dummy/src/: api.cpp  dummy_nic.cpp  main.cpp  nic.cpp  packet.cpp  stack_api.cpp
firecracker/: README.md  main.tf  outputs.tf  terraform.tfvars  variables.tf
microvm_net/: CMakeLists.txt  Makefile  README.md  test_minimal  test_minimal.c
microvm_net/cmake/: microvm_net-config.cmake.in  microvm_net.pc.in
microvm_net/examples/: CMakeLists.txt  benchmark.c  echo_client.c  echo_server.c  hello_world.c
microvm_net/include/: buffer_pool.h  microvm_net.h  packet_io.h  ring_buffer.h
microvm_net/src/: buffer_pool.c  microvm_net.c  packet_io_tap.c  ring_buffer.c
qemu/: README.md  networking.md  tests.md
rootfs/: README.md  build_script.toml  server.service  update_code.sh  user_data.sh
rootfs/unused/: debootstrap-rootfs.md
tas/: README.md  benchmark.md  setup.md  vm_init.sh
tun-tap/: README.md
(+26 files in other folders)
